fixing gallery layout issues and menu items

--- a/src/styles/gallery.module.css
+++ b/src/styles/gallery.module.css
@@ -1,19 +1,20 @@
 /***** Gallery ********/
   
-
-
 .gallery {
   padding: 10px;
   display: flex;
   flex-flow: row wrap;
-  gap: 15px;
-  justify-content: flex-start;
+  gap: 5px;
+  align-content: space-around;
+  justify-content: center;
 }
 .gallery a {
   background-color: #333;
   flex:auto;
   height: 250px;
-  min-width: 150px;
+  min-width: 75px;
+  max-width: 375px;
+  text-align: center;
 }
 .gallery a:nth-last-child(-n+3){
   flex-grow: 0;
@@ -26,13 +27,5 @@
   height: 100%;
 }
 @media screen and (max-width: 570px) {
-  .gallery {
-    column-count: 3;
-    gap: 10px 0;
-  }
-  .gallery a img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;;
-  }
+
 }
