--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,8 +80,8 @@ header nav#menu ul {
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-  gap: 1rem;
+  grid-template-columns: repeat(6, minmax( 0, 1fr));
+  gap: .25rem;
 }
 header nav#menu ul li {
   text-transform: uppercase;
